# ruvector

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: hooks-ci.yml
.ruvector/: intelligence.json
crates/cognitum-gate-kernel/: Cargo.toml
crates/cognitum-gate-kernel/src/: canonical_witness.rs  lib.rs
crates/cognitum-gate-kernel/tests/: canonical_witness_bench.rs
crates/mcp-brain-server/scripts/: pubmed_discover.sh
crates/mcp-brain-server/src/: lib.rs  pubmed.rs  quantization.rs  routes.rs  store.rs  symbolic.rs  web_ingest.rs  web_memory.rs  web_store.rs
crates/neural-trader-coherence/: Cargo.toml
crates/neural-trader-coherence/src/: lib.rs
crates/neural-trader-core/: Cargo.toml
crates/neural-trader-core/src/: lib.rs
crates/neural-trader-replay/: Cargo.toml
crates/neural-trader-replay/src/: lib.rs
crates/prime-radiant/: Cargo.toml
crates/prime-radiant/src/attention/: topology.rs
crates/prime-radiant/src/coherence/: energy.rs  engine.rs  history.rs  incremental.rs
crates/prime-radiant/src/cohomology/: cohomology_group.rs  laplacian.rs  neural.rs
crates/prime-radiant/src/execution/: gate.rs  ladder.rs
crates/prime-radiant/src/governance/: mod.rs
crates/prime-radiant/src/gpu/: buffer.rs  engine.rs
crates/prime-radiant/src/ruvllm_integration/: adapter.rs  coherence_validator.rs  confidence.rs  gate.rs  mod.rs  (+4 more)
crates/prime-radiant/tests/: storage_tests.rs
crates/ruvector-attention/: Cargo.toml  README.md
crates/ruvector-attention-node/: package.json
crates/ruvector-attention-wasm/pkg/: package.json  ruvector_attention_wasm_bg.wasm
crates/ruvector-attention/src/: lib.rs
crates/ruvector-cognitive-container/: Cargo.toml
crates/ruvector-cognitive-container/src/: error.rs
crates/ruvector-coherence/src/: spectral.rs
crates/ruvector-decompiler/: Cargo.toml
crates/ruvector-decompiler/examples/: run_on_cli.rs
crates/ruvector-decompiler/src/: beautifier.rs  error.rs  inferrer.rs  lib.rs  parser.rs  partitioner.rs  types.rs  witness.rs
crates/ruvector-decompiler/tests/: integration.rs
crates/ruvector-fpga-transformer-wasm/src/: lib.rs
crates/ruvector-fpga-transformer/benches/: correctness.rs  gating.rs  latency.rs
crates/ruvector-fpga-transformer/examples/: basic_inference.rs  daemon_client.rs
crates/ruvector-fpga-transformer/src/: types.rs
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-graph-node/src/: lib.rs  types.rs
crates/ruvector-graph/src/: graph.rs
crates/ruvector-hailo-cluster/: Cargo.toml  README.md  RUVLLM_CLUSTER_PLAN.md  RUVLLM_NEXT_PLAN.md
crates/ruvector-hailo-cluster/deploy/: install-ruvllm-pi-worker.sh  ruvllm-cluster-smoke.sh  ruvllm-pi-worker.env.example  ruvllm-pi-worker.service
crates/ruvector-hailo-cluster/proto/: embedding.proto
crates/ruvector-hailo-cluster/src/: grpc_transport.rs  transport.rs
crates/ruvector-hailo-cluster/tests/: bench_cli.rs  ruview_csi_bridge_cli.rs  ruvllm_bridge_cli.rs
crates/ruvector-math/benches/: information_geometry.rs  optimal_transport.rs  product_manifold.rs  spectral.rs  tropical.rs
crates/ruvector-mincut-node/: Cargo.toml
crates/ruvector-mincut-wasm/: Cargo.toml
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-mincut/tests/: canonical_bench.rs
crates/ruvector-postgres/: README.md
crates/ruvector-rabitq/src/: index.rs  lib.rs  scan.rs
crates/ruvector-rulake/: BENCHMARK.md  README.md
crates/ruvector-rulake/src/: bundle.rs  cache.rs  fs_backend.rs  lake.rs  lib.rs
crates/ruvector-rulake/tests/: federation_smoke.rs
crates/ruvector-sparsifier/: Cargo.toml
crates/ruvllm/: .reasoning_bank_patterns  Cargo.toml  README.md
crates/ruvllm-cli/: Cargo.toml
crates/ruvllm/src/: autodetect.rs  tokenizer.rs
crates/ruvllm/tests/: acceptance_gates.rs  autodetect_integration.rs
crates/ruvllm_sparse_attention/: Cargo.toml  README.md
crates/ruvllm_sparse_attention/benches/: attention_bench.rs
crates/ruvllm_sparse_attention/docs/: TUTORIAL.md  benchmark_edge_estimates.csv
crates/ruvllm_sparse_attention/docs/adr/: ADR_0001_subquadratic_sparse_attention.md
crates/ruvllm_sparse_attention/examples/: esp32s3_smoke.rs  fastgrnn_gated_scaling.rs  run_sparse_attention.rs
crates/ruvllm_sparse_attention/src/: attention.rs  fastgrnn_gate.rs  lib.rs  model.rs  tensor.rs
crates/rvAgent/rvagent-cli/: Cargo.toml
crates/rvlite/: Cargo.toml
crates/sona/src/: reasoning_bank.rs  types.rs
docs/adr/: ADR-033-progressive-indexing-hardening.md  ADR-036-agi-cognitive-container.md  ADR-084-neural-trader-ruvector.md  ADR-115-common-crawl-temporal-compression.md  ADR-129-ruvltra-gcloud-training-turboquant.md  ADR-135-mincut-decompiler-with-witness-chains.md  ADR-136-gpu-trained-deobfuscation-model.md  ADR-176-hef-integration-epic.md  ADR-178-ruvector-ruview-hailo-integration-gap-analysis.md  ADR-179-ruvllm-pi-cluster-deployment.md  ADR-180-ruvllm-serving-engine-continuous-batching.md  ADR-181-ruvllm-pi-quant-bitnet-integration.md  ADR-182-hailo-10-cluster-migration.md  ADR-183-sparse-attention-rand-dev-dependency.md  ADR-184-sparse-attention-online-softmax.md  ADR-185-sparse-attention-noncausal-landmark-fix.md  ADR-186-sparse-attention-edge-case-tests.md  ADR-187-tensor-zeros-overflow-check.md  ADR-188-sparse-attention-stamp-scheme-comment.md  ADR-189-sparse-attention-kv-cache-incremental-decode.md  ADR-190-sparse-attention-gqa-mqa-support.md  ADR-191-sparse-attention-pi-zero-2w-production-hardening.md  ADR-192-sparse-attention-no-std-esp32-support.md
docs/cnn/: index.html
docs/hooks/: IMPLEMENTATION_PLAN.md  MVP_CHECKLIST.md  REVIEW_REPORT.md  REVIEW_SUMMARY.md
docs/research/claude-code-rvsource/: 20-sota-decompiler-research.md
examples/benchmarks/: Cargo.toml
examples/benchmarks/src/: intelligence_metrics.rs  lib.rs  reasoning_bank.rs  rvf_intelligence_bench.rs  superintelligence.rs  temporal.rs  timepuzzles.rs  vector_index.rs
examples/dna/: README.md
npm/ruvector/: README.md  package.json
scripts/: training_orchestrator.sh
scripts/training/: generate-deobfuscation-data.mjs
(+80 files in other folders)
