[package]
name = "neural-trader-replay"
version = "0.1.0"
edition = "2021"
description = "Witnessable replay segments, RVF serialization, and audit receipt logging for Neural Trader"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
neural-trader-core = { path = "../neural-trader-core" }
neural-trader-coherence = { path = "../neural-trader-coherence" }

[dev-dependencies]
