[package]
name = "ruvector-hailo-cluster"
version = "0.1.0"
edition = "2021"
description = "Multi-Pi cluster coordinator for ruvector Hailo embedding workers (ADR-167 §8)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["ruvector", "hailo", "cluster", "embedding", "edge-ai"]
categories = ["network-programming", "embedded"]
# Iter 202 — internal-only crate. Carries path deps on ruvector-hailo
# + ruvector-mmwave + hailort-sys, so it can't be published to
# crates.io anyway. Setting `publish = false` is also what lets
# cargo-deny's allow-wildcard-paths honor the in-workspace path
# exception for the bans check.
publish = false

[features]
default = []
# `grpc` is reserved for future feature-gating; everything in proto/
# grpc_transport already builds unconditionally.
grpc = []
# `hailo` propagates to ruvector-hailo so the worker binary actually
# talks to /dev/hailo0. Default off so x86 dev hosts can still build.
hailo = ["ruvector-hailo/hailo"]
# `tls` enables rustls-backed TLS on GrpcTransport (client) and the
# worker (server). Mitigates ADR-172 §1a HIGH (cleartext gRPC). Off by
# default — Tailscale already encrypts the wire; opt-in for defense-in-
# depth or non-Tailscale deploys.
tls = ["tonic/tls"]
# Iter 134 — propagate ruvector-hailo's CPU fallback through the cluster
# so the worker binary picks up `model.safetensors` + `tokenizer.json` +
# `config.json` and runs real BERT-6 inference on host CPU when no HEF
# is present. Path C from ADR-167. Adds ~50 MB of compiled deps; off by
# default so x86 dev hosts that just want to type-check don't pay the
# cost. Production worker builds turn it on alongside `hailo`:
#   cargo build --features hailo,cpu-fallback --bin ruvector-hailo-worker
cpu-fallback = ["ruvector-hailo/cpu-fallback"]

# ADR-179 iter 9 — wire the in-tree ruvllm engine into ruvllm-pi-worker.
# Off by default to keep `cargo build` fast for non-LLM work.
ruvllm-engine = ["dep:ruvllm", "dep:anyhow"]

# Iter 219 — rejoined the parent workspace. Closes ADR-178 Gap E
# (folded into Gap B). The iter-218 EmbeddingProvider impl bridged
# the trait gap; rejoining lets `cargo build --workspace` see the
# cluster crate. The hailo + cpu-fallback features stay opt-in so
# stock x86 workspace builds don't pull libhailort or candle.

[dependencies]
thiserror          = "2"
tonic              = { version = "0.12", default-features = false, features = ["codegen", "prost", "channel", "server"] }
prost              = "0.13"
tokio              = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
# ADR-172 §3b iter-104: per-peer leaky-bucket rate limiter. `dashmap`
# gives a sharded concurrent map keyed by peer identity; `governor`
# implements the bucket per peer. Both are pulled unconditionally — the
# rate limiter is opt-in via env var but the code path always compiles.
dashmap            = "6"
governor           = { version = "0.7", default-features = false, features = ["std", "quanta"] }
# ADR-172 §1c iter-107: optional Ed25519 detached signature verification
# on `--workers-file` manifests. Pure-Rust, no native deps.
ed25519-dalek      = { version = "2", default-features = false, features = ["std"] }
# Iter 115: shared mmWave parser. Same source as the ESP32 firmware
# consumes; the host-side `mmwave-bridge` bin uses it to decode bytes
# off /dev/ttyUSB* or a synthetic simulator stream.
ruvector-mmwave    = { path = "../ruvector-mmwave", features = ["std"] }
tokio-stream       = { version = "0.1", default-features = false, features = ["net"] }
futures-core       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
sha2               = "0.10"
ruvector-hailo     = { path = "../ruvector-hailo" }
# Iter 218 — closes ADR-178 Gap B (HIGH) part 1. Path dep on
# ruvector-core lets HailoClusterEmbedder implement
# `EmbeddingProvider`, the headline integration ADR-167 §8.4 promised.
# default-features=false keeps reqwest / ort / hnsw out — we only
# need the trait + error surface.
ruvector-core      = { path = "../ruvector-core", default-features = false }
# ADR-179 iter 9: in-tree LLM inference engine. Optional + feature-gated
# behind `ruvllm-engine` so default builds don't pull candle (heavy).
# Cross-builds for aarch64 require `--no-default-features --features
# ruvllm-engine` here AND ruvllm built without `hub-download` (iter 8).
ruvllm             = { path = "../ruvllm", optional = true, default-features = false, features = ["async-runtime", "candle", "quantize"] }
anyhow             = { version = "1", optional = true }

[[bin]]
name = "ruvector-hailo-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "ruvector-hailo-embed"
path = "src/bin/embed.rs"

[[bin]]
name = "ruvector-hailo-fakeworker"
path = "src/bin/fakeworker.rs"

[[bin]]
name = "ruvector-hailo-stats"
path = "src/bin/stats.rs"

[[bin]]
name = "ruvector-hailo-cluster-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "ruvector-mmwave-bridge"
path = "src/bin/mmwave-bridge.rs"

[[bin]]
# Iter 123: ADR-171 / RuView CSI integration. Listens on UDP for
# RuView's ADR-018 binary CSI frames, posts NL summaries into the
# cluster's embed RPC. Companion to ruvector-mmwave-bridge.
name = "ruview-csi-bridge"
path = "src/bin/ruview-csi-bridge.rs"

[[bin]]
# Iter 124: ADR-173 / ruvllm host-side seam. JSONL stdin/stdout
# adapter so any ruvllm process (or curl + jq) can embed text via
# the cluster without speaking gRPC.
name = "ruvllm-bridge"
path = "src/bin/ruvllm-bridge.rs"

[[bin]]
# ADR-179 (iter 3, scaffold): per-Pi LLM completion worker. Uses
# `ruvllm` as a library + loads quantized models from local paths
# (no hf-hub) so it cross-compiles cleanly to aarch64. Sibling to
# `ruvector-hailo-worker` on each Pi 5 — :50051 for embeddings,
# :50053 for completions. Engine wiring lands iter 4–6.
name = "ruvllm-pi-worker"
path = "src/bin/ruvllm-pi-worker.rs"

[build-dependencies]
tonic-build         = { version = "0.12", default-features = false, features = ["prost"] }
protoc-bin-vendored = "3"

[dev-dependencies]
anyhow       = "1"
tokio-stream = { version = "0.1", features = ["net"] }
criterion    = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
# Self-signed cert generation for the TLS roundtrip test. Only used
# under `cargo test --features tls`; pulled regardless because dev-deps
# can't be feature-gated cleanly, but build cost is small (~50KB).
rcgen        = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[[bench]]
name = "dispatch"
harness = false

# Ultra release profile (iter 82 SOTA pass).
#
# Trades compile time for runtime speed:
# - lto = "fat": cross-crate inlining including tonic + prost
# - codegen-units = 1: no parallel codegen → strongest optimisation per unit
# - panic = "abort": no unwinding → smaller code, fewer landingpads
# - strip = "symbols": shrinks binary; not strictly perf, but cuts deploy size
#
# Default `cargo build --release` still uses the fast-compile profile;
# opt in with `cargo build --profile=ultra` when you want the extra ~5-15%.
[profile.ultra]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
